xay dung UI header #1

--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,5 @@
 .wrapper {
+  --search-border-radius: 92px;
   height: var(--default-layout-height);
   border: 1px solid #ccc;
   display: flex;
@@ -9,5 +10,79 @@
 .container {
   height: 100%;
   width: var(--default-layout-width);
-  background-color: #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.search {
+  position: relative;
+  background: rgba(22, 24, 35, 0.06);
+  width: 361px;
+  height: 46px;
+  border-radius: var(--search-border-radius);
+  padding-left: 16px;
+  display: flex;
+  border: 1.5px solid transparent;
+
+  input {
+    flex: 1;
+    color: var(--black);
+    font-size: 1.6rem;
+    font-weight: 400;
+    height: 100%;
+    background-color: transparent;
+    caret-color: var(--primary-color);
+  }
+
+  input:not(:placeholder-shown) ~ .search-btn {
+    color: rgba(22, 24, 35, 0.75);
+  }
+
+  &::before {
+    position: absolute;
+    top: 9px;
+    right: 52px;
+    content: "";
+    height: 28px;
+    width: 1px;
+    background-color: rgba(22, 24, 35, 0.12);
+  }
+
+  &:focus-within {
+    border-color: rgba(22, 24, 35, 0.2);
+  }
+}
+.clear,
+.loading {
+  position: absolute;
+  font-size: 1.6rem;
+  color: rgba(22, 24, 35, 0.34);
+  right: 64px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+.loading {
+  display: none;
+}
+.search-btn {
+  color: rgba(22, 24, 35, 0.34);
+  font-size: 1.8rem;
+  width: 52px;
+  height: 42px;
+  border-top-right-radius: var(--search-border-radius);
+  border-bottom-right-radius: var(--search-border-radius);
+
+  &:hover {
+    cursor: pointer;
+    background-color: rgba(22, 24, 35, 0.03);
+  }
+
+  &:active {
+    background-color: rgba(22, 24, 35, 0.06);
+  }
 }
