--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,9 +1,11 @@
 @import "normalize.css";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap");
 :root {
-  --primary: #fe2c55;
+  --primary-color: #fe2c55;
   --default-layout-height: 60px;
   --default-layout-width: 1150px;
+  --black: #000;
+  --text-color: #000;
 }
 
 * {
@@ -21,4 +23,16 @@ body {
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
+  color: var(--text-color);
+}
+
+button,
+input,
+[tabindex] {
+  outline: none;
+  border: none;
+}
+a[href] {
+  text-decoration: none;
+  color: var(--text-color);
 }
