--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -15,10 +15,20 @@
   justify-content: space-between;
 }
 
+.search,
+.search-result {
+  width: 361px;
+}
+
+.search-title {
+  font-size: 1.4rem;
+  color: rgba(22, 24, 35, 0.5);
+  padding-left: 16px;
+}
+
 .search {
   position: relative;
   background: rgba(22, 24, 35, 0.06);
-  width: 361px;
   height: 46px;
   border-radius: var(--search-border-radius);
   padding-left: 16px;
