--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -4,6 +4,7 @@
   --primary-color: #fe2c55;
   --default-layout-height: 60px;
   --default-layout-width: 1150px;
+  --white: #fff;
   --black: #000;
   --text-color: #000;
 }
