--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -96,3 +96,12 @@
     background-color: rgba(22, 24, 35, 0.06);
   }
 }
+
+.menu-btn {
+  background-color: transparent;
+  font-size: 2rem;
+  min-width: 0;
+  margin-left: 16px;
+  padding: 4px;
+  cursor: pointer;
+}
