--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -1,3 +1,22 @@
 .menu-list {
-  width: 224px;
+  width: 244px;
+
+  .menu-item {
+    margin-left: 0;
+  }
+}
+
+.menu-custom {
+  padding-bottom: 8px;
+}
+
+.menu-item {
+  padding: 13px 12px;
+  display: flex;
+  width: 100%;
+  border-radius: 0;
+  justify-content: flex-start;
+  &:hover {
+    background: rgba(22, 24, 35, 0.03);
+  }
 }
