--- a/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -7,8 +7,8 @@
 .container {
   min-height: 500px;
   width: var(--default-layout-width);
-  background-color: #666;
   display: flex;
+  padding: 0 22px;
 }
 
 .content {
