--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -16,7 +16,28 @@
   width: 100%;
   border-radius: 0;
   justify-content: flex-start;
+  line-height: 1.8rem;
   &:hover {
     background: rgba(22, 24, 35, 0.03);
   }
+}
+
+.header {
+  height: 50px;
+  position: relative;
+  margin-top: -8px;
+}
+
+.btn-back {
+  cursor: pointer;
+  background-color: transparent;
+  width: 50px;
+  height: 100%;
+}
+
+.title {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
