--- a/src/components/Popper/Menu/Menu.module.scss
+++ b/src/components/Popper/Menu/Menu.module.scss
@@ -21,6 +21,10 @@
   &:hover {
     background: rgba(22, 24, 35, 0.03);
   }
+
+  &.separate {
+    border-top: 1px solid rgba(22, 24, 35, 0.12);
+  }
 }
 
 .header {
