UI header #7.0 ember new font

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,6 +3,7 @@
   border-radius: 4px;
   font-weight: 600;
   font-size: 1.6rem;
+  font-family: "ProximaNova", sans-serif;
   background-color: transparent;
   user-select: none;
   cursor: pointer;
