--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -7,6 +7,8 @@
   background-color: transparent;
   user-select: none;
   cursor: pointer;
+  display: flex;
+  align-items: center;
 
   + .wrapper {
     margin-left: 8px;
